# clipper-v0

./: .dockerignore  .env  .gitignore  .gitmodules  ClipperRestDockerFile  DigitsBenchDockerFile  Dockerfile  README.md  design.md  digits_bench.toml  docker-compose.yml  docker_build_cldev.sh  docker_build_digits.sh  docker_build_rest.sh  exp_conf.toml  python_requirements.txt  run_evals.sh  test.toml  timit_eval.py
OLD_benchmarking_logs/batching_eval/: aimd_batching_160821-163552_config.json  aimd_batching_160821-163808_config.json  aimd_batching_160821-163808_results.json  gather_batch_size_samples_160825-190843_results.json  gather_batch_size_samples_160825-192429_logs.text  gather_batch_size_samples_160825-192620_config.json  gather_batch_size_samples_160825-193058_config.json  gather_batch_size_samples_160825-193058_logs.text  parse_logs.py  (+23 more)
analysis/: digits_functions.py  end_to_end_eval.ipynb  most_informative.ipynb  sample_feature.py  sklearn_vs_spark_svms_mnist.ipynb  timit_personalization_eval.ipynb
benchmarking_logs/: 20160815-22_01_55_config.toml  20160815-22_01_55_results.json  20160815-22_34_45_config.toml  20160815-22_34_45_results.json  20160815-22_37_45_config.toml  20160815-22_37_45_results.json
benchmarks/: Cargo.toml  cifar10.toml  digits-bench-fast-python-noop_results.json  digits-bench-python-noop_results.json  digits_bench.toml  exp_conf.toml  inception.toml  run_cifar_benchmark.sh  run_inception_benchmark.sh  run_mnist_benchmark.sh  run_thruput_bench.sh  rust-noop-mw-digits-results.json  thruput_bench.toml
benchmarks/src/: digits.rs  digits_benchmark.rs.OLD  main.rs
benchmarks/thruput_logs/: thruput-test_batch_10_results.json  thruput-test_batch_20_results.json
clipper_server/: Cargo.toml  anytime.toml  blocking_latency_results.txt  build.rs  digits.toml  features.toml  latency_out.txt  run_digits.sh  run_feature_lat_exp.sh  sklearn_blocking_latencies.txt
clipper_server/conf/: cifar10_nin.toml  clipper.toml  clipper.toml.example  inception.toml  redis.conf  test.toml
clipper_server/experiments_RAW/end_to_end_THRUPUT/: baseline.txt  baseline_CLEAN.txt  batching2.txt  batching_CLEAN.txt  max_features.txt  max_features_CLEAN.txt  no_features.txt
clipper_server/experiments_RAW/end_to_end_THRUPUT_MAX_LAT/: batching.txt  no_features.txt
clipper_server/experiments_RAW/faas_benchmarks/: sklearn_svm_dynamic_batch.txt  spark_100rf.txt  spark_10rf.txt  spark_lr.txt  spark_lr_dynamic_batch.txt  spark_rf10_dynamic_batch.txt  spark_svm.txt  spark_svm_old.txt
clipper_server/experiments_RAW/feature_lats/: noop.txt  pyspark_100rf_local.txt  pyspark_10rf_local.txt  pyspark_lr_local.txt  pyspark_svm_local.txt  sklearn_svm_local.txt
clipper_server/experiments_RAW/tensorflow_compare/: convnet_b32.txt  convnet_b32_slo10.txt  softmax_clipper.txt  softmax_tfserve_60.txt  tf_serve_convnet_b32_results_20.txt  tf_serve_convnet_b32_results_30.txt  tf_serve_convnet_b32_results_35.txt  tf_serve_convnet_b32_results_40.txt  tf_serve_convnet_b32_results_50.txt  tf_serve_convnet_b32_results_60.txt  tf_serve_convnet_b32_results_70.txt  tf_serve_convnet_b32_results_80.txt
clipper_server/liblinear-sys/: Cargo.toml  build.rs
clipper_server/liblinear-sys/src/: common.rs  lib.rs
clipper_server/libsvm-sys/: Cargo.toml  build.rs
clipper_server/libsvm-sys/src/: common.rs  lib.rs
clipper_server/notes/: server_outline.rs
clipper_server/schema/: feature.capnp
clipper_server/src/: bench.rs  digits.rs  digits_benchmark.rs  faas_benchmark.rs  features.rs  hashing.rs  linalg.rs  main.rs  metrics.rs  pyclipper.rs  rest.rs  rpc.rs  server.rs
clipper_server/src/clipper/: batching.rs  cache.rs  cmt.rs  configuration.rs  correction_policy.rs  digits.rs  features.rs  hashing.rs  lib.rs  lib.rs.in  metrics.rs  rpc.rs  server-old.rs  server.rs  server2.rs  tmp014e4_  tmp09r6ci  tmp0amoff  tmp0azctk  tmp0ivm6x  tmp0lb7hn  tmp0oeojt  tmp0rgf_i  tmp0sl5xx  tmp1ecpdb  tmp1f8tws  tmp1xlzbh  tmp24epxj  tmp2f9sjn  tmp2kmpuo  tmp2wz8l_  tmp33_0h2  tmp3pjr6a  tmp3rwrmn  tmp3s2qes  tmp490c9m  tmp4kb40b  tmp53legw  tmp5cwcfm  tmp5k0pyh  (+143 more)
clipper_server/src/clipper/ml/: classification.rs  linalg.rs  linear.rs  mod.rs  svm.rs
docker-compose-setups/: .env  docker-compose-sklearn-rf.yml  docker-compose-spark-digits.yml  docker-compose.yml  gen_replicas.py
examples/: add-model-example.py  cifar10-example-client.py  inception-example-client.py  mnist-client.py  pyclipper-example.py
experiments-bin/: docker-compose.yml  gen-experiments.py  run_digits_trial.py
management/: Untitled.ipynb  clipper-dbcloud-demo.ipynb  clipper_manager.py  run_serving_workload.ipynb  send_updates.ipynb
micro_benchmarks/: digits_utils.py  model_eval_latency.py
model_wrappers/python/faster_rpc/: Cargo.toml  faster_rpc.py
model_wrappers/python/faster_rpc/src/: lib.rs
monitoring/: README.md  grafana_dashboard.json  init_metrics.sh
old_python_impl/: parallel_features.py  post_commit_actions.ipynb  predict.py
optimization-service/: Dockerfile  build_docker.sh  optimization-server.py  test-client.py  tmp.py
pyclipper/: Cargo.toml  features.toml  py-clipper.md
rpc-tuning-tools/: Cargo.toml
rpc-tuning-tools/src/: client.rs  rpc.rs  server.rs
slot-allocation/: resource-alloc-lp-formulation.ipynb
system/: sample_feature.py
timit/: run_evals.sh  timit_anytime.py  timit_anytime_1_to_2.json  timit_anytime_3_to_4.json  timit_anytime_5_to_6.json  timit_anytime_7_to_8.json  timit_personalization_eval.ipynb  timit_user_eval_1_to_2.json  timit_user_eval_3_to_4.json  timit_user_eval_5_to_6.json  timit_user_eval_7_to_8.json
tugboat_server/: Cargo.toml  build.rs
(+1755 files in other folders)
