[package]
name = "clipper-benchmarks"
version = "0.1.0"
authors = ["Dan Crankshaw <dscrankshaw@gmail.com>"]

[dependencies]
rand = "0.3"
time = "0.1"
toml = "0.1"
log = "0.3"
env_logger = "0.3"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
docopt = "0.6"

[dependencies.clipper]
path = "../clipper_server"
# default-features = false
# features = ["nightly"]
