[package]
name = "clipper"
version = "0.1.0"
authors = ["Dan Crankshaw <dscrankshaw@gmail.com>"]
# build = "build.rs"

[[bin]]
name = "clipper"
path = "src/main.rs"

[profile.release]
debug = true

# [build-dependencies]
# capnpc = "*"
# [build-dependencies.capnpc]
# git = "https://github.com/dcrankshaw/capnpc-rust"

[dependencies]
hyper = "0.7"
rand = "0.3"
time = "0.1"
# mio = "0.5"
num_cpus = "0.2"
toml = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
net2 = "0.2.21"
byteorder = "0.4"
log = "0.3"
env_logger = "0.3"
# quickersort = "1.0.1"
# getopts = "0.2"
# capnp = "0.6.1"
# gj = "0.1.1"
# capnp-rpc = "0.6.1"

# [dependencies.capnp]
# git = "https://github.com/dcrankshaw/capnproto-rust"
#
# [dependencies.gj]
# git = "https://github.com/dcrankshaw/gj"
#
# [dependencies.capnp-rpc]
# git = "https://github.com/dcrankshaw/capnp-rpc-rust"
#
# [dependencies.eventual]
# git = "https://github.com/carllerche/eventual"

[dependencies.linear-models]
git = "https://github.com/dcrankshaw/rust-linear-models"
# path = "/crankshaw-local/rust-linear-models"

