[package]
name = "clipper"
version = "0.1.0"
authors = ["Dan Crankshaw <dscrankshaw@gmail.com>"]

[lib]
name = "clipper"
path = "src/clipper/lib.rs"
# crate-types = ["rlib", "dylib", "bin"]

[[bin]]
name = "clipper-rest"
path = "src/bin/clipper-rest.rs"


[dependencies]
rand = "0.3"
time = "0.1"
# mio = "0.5"
num_cpus = "0.2"
toml = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
net2 = "0.2.21"
byteorder = "0.4"
log = "0.3"
env_logger = "0.3"
spmc = "0.2"
libc = "0.2"

[dependencies.linear-models]
git = "https://github.com/dcrankshaw/rust-linear-models"


[dependencies.hyper]
git = "https://github.com/hyperium/hyper"
