[package]
name = "clipper"
version = "0.1.0"
authors = ["Dan Crankshaw <dscrankshaw@gmail.com>"]
build = "build.rs"

# liblinear-sys generates some intermediate files
# that don't sit in /target and thus don't get cleaned
# with cargo clean. If you install cargo-cln
# (cargo install cargo-cln) this additional metadata will
# clean it. This is only for sanitary reasons, it will be
# cleaned and rebuilt at the appropriate optimization level
# with every invocation of cargo build.
[package.metadata]
cln = [
    ["rm", "liblinear-sys/liblinear/blas/blas.a",
      "liblinear-sys/liblinear/blas/daxpy.o",
      "liblinear-sys/liblinear/blas/ddot.o",
      "liblinear-sys/liblinear/blas/dnrm2.o",
      "liblinear-sys/liblinear/blas/dscal.o"]
]

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "*", optional = true }

[lib]
name = "clipper"
path = "src/clipper/lib.rs"
# crate-types = ["rlib", "dylib", "bin"]

[[bin]]
name = "clipper-rest"
path = "src/bin/clipper-rest.rs"


[dependencies]
rand = "0.3"
time = "0.1"
# mio = "0.5"
num_cpus = "0.2"
toml = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
net2 = "0.2.21"
byteorder = "0.4"
log = "0.3"
env_logger = "0.3"
spmc = "0.2"
libc = "0.2"
serde = "0.7"
bincode = "0.5"
serde_json = "0.7"
serde_macros = { version = "*", optional = true }
threadpool = "0.1"
liblinear-sys = {path = "liblinear-sys", version = "0.1"}
libsvm-sys = {path = "libsvm-sys", version = "0.1"}
chan-signal = "0.1"

# [dependencies.linear-models]
# git = "https://github.com/dcrankshaw/rust-linear-models"


[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.redis]
version = "0.5.3"
features = ["unix_socket"]
